--- a/WebContent/src/views/index.html
+++ b/WebContent/src/views/index.html
@@ -122,7 +122,7 @@
 
     layui.use(['index','api'], function () {
         var $ = layui.$;
-        var da = JSON.parse("[{\"id\":\"1\",\"type\":\"2\",\"name\":\"测试\",\"url\":\"test/test.html\",\"sort\":\"1\",\"descr\":\"\",\"child\":\"\"}]")
+        var da = JSON.parse("[{\"id\":\"1\",\"type\":\"2\",\"name\":\"学员报名审核\",\"url\":\"apply/applyList.html\",\"sort\":\"1\",\"descr\":\"\",\"child\":\"\"}]")
         var html = initMenu(da);
         $("#LAY-system-side-menu").html(html)
         layui.element.render()
