--- a/WebContent/src/views/test/test.html
+++ b/WebContent/src/views/test/test.html
@@ -1,70 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <title>Layui</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../../layuiadmin/layui/css/layui.css" media="all">
-    <script src="../../layuiadmin/layui/layui.js"></script>
-    <script src="../../url.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="../../layuiadmin/layui/css/layui.css"  media="all">
+    <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
 </head>
 <body>
-    <div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">长输入框</label>
-            <div class="layui-input-inline">
-                <input type="text" name="title" style="width: 200px" autocomplete="off" placeholder="请输入标题" class="layui-input">
-            </div>
+<div class="site-demo-button" id="layerDemo" style="margin-bottom: 0;">
+    <button data-method="confirmTrans" class="layui-btn">配置一个透明的询问框</button>
+</div>
+<!-- 示例-970 -->
+<ins class="adsbygoogle" style="display:inline-block;width:970px;height:90px" data-ad-client="ca-pub-6111334333458862" data-ad-slot="3820120620"></ins>
 
-            <label class="layui-form-label">长输入框</label>
-            <div class="layui-input-inline">
-                <input type="text" name="title" style="width: 200px" autocomplete="off" placeholder="请输入标题" class="layui-input">
-            </div>
-        </div>
-    </div>
-    <center>
-        <button type="button" class="layui-btn layui-btn-normal">查询</button>
-    </center>
-    <table class="layui-hide" id="table1"></table>
+<script src="../../layuiadmin/layui/layui.js" charset="utf-8"></script>
+<!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
 <script>
-    layui.use(['table'], function () {
-        var table = layui.table;
+    layui.use('layer', function(){ //独立版的layer无需执行这一句
+        var $ = layui.jquery, layer = layui.layer; //独立版的layer无需执行这一句
 
-        table.render({
-            elem: '#table1'
-            ,url: baseUrl + "/apply/list.do"
-            ,parseData: function (res) {
-                return {
-                    "code": res.code,
-                    "count": res.data.count,
-                    "data": res.data.data
-                }
-            }
-            ,cols: [[
-                {field:'studentName', width:"10%", title: '幼儿名称', sort: true}
-                ,{field:'dateOfBirth', width:"10%", title: '出生日期'}
-                ,{field:'patriarch', width:"15%", title: '监护人姓名', sort: true}
-                ,{field:'relation', width:"10%", title: '关系'}
-                ,{field:'phone', width:"15%", title: '电话'}
-                ,{field:'sex', width:"20%", title: '性别',templet: function (data) {
-                        return "<span>"+data.sex == 1 ? "男生" : "女生"+"</span>"
-                    }}
-                ,{field:'auditStatus', width:"20%", title: '审核状态',templet: function (data) {
-                        if (data.auditStatus == 0) {
-                            return "<span>待审核</span>";
-                        } else if (data.auditStatus == 1) {
-                            return "<span>审核通过</span>";
-                        } else if (data.auditStatus == 2) {
-                            return "<span>不通过</span>";
-                        }
-                    }
-            }
-            ]]
-            ,page: true
-        });
 
-    })
+
+    });
 </script>
 
 </body>
